# Conntract_RAG

./: Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: admin.py  ask.py  audit.py  extract.py  ingest.py
app/db/: connection.py  crud.py  models.py
app/services/: llm_extractor.py  pdf_reader.py  rag_engine.py  text_splitter.py  vector_store.py
vectorstore/: index.faiss  index.pkl
