[project]
name = "conntract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.0",
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pdfplumber>=0.11.8",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pypdf>=6.4.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
